# ocrd_party

./: .gitignore  =3.0.2  Dockerfile  README.md  docker-compose.yml  ocrd-tool.json  pyproject.toml  requirements.txt
ocrd_party/: cli.py  ocrd-tool.json  recognize.py
