[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrd-party"
version = "0.1.0"
description = "OCR-D processor for the party text recognizer (text recognition)"
authors = [{ name = "Constantin Lehenmeier", email = "info@constantinlehenmeier.de" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.12"
keywords = ["OCR", "OCR-D", "text-recognition", "HTR", "party"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "ocrd>=2.30.0",
    "kraken>=5.3.0",
    "party>=0.0.1",
    "albumentations==1.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "pytest-mock>=3.6",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.0",
    "mypy>=0.910",
]

test = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "pytest-mock>=3.6",
    "lxml>=4.6",
]

docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
Homepage = "https://github.com/CrazyCrud/ocrd_party"
Repository = "https://github.com/CrazyCrud/ocrd_party"
Issues = "https://github.com/CrazyCrud/ocrd_party/issues"
Documentation = "https://github.com/CrazyCrud/ocrd_party#readme"

[project.scripts]
ocrd-party-recognize = "ocrd_party.cli:ocrd_party_recognize"

[tool.setuptools]
packages = ["ocrd_party"]
include-package-data = true

[tool.setuptools.package-data]
ocrd_party = ["*.json", "ocrd-tool.json"]